project/services/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: myloadbalancer
spec:
  selector:
    app: myapp
  ports:
  - port: 8000
    targetPort: 8000
  type: LoadBalancer
