project/services/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
spec:
  type: NodePort
  selector:
    app: flask-demo
  ports:
  - port: 5000
    targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-web
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 8080
