project/services/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: "localhost"
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeport
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
